--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
       <nav>
         <a href='About'>About</a>
         <a href='Clients'>Clients</a>
-        <a href='Blog'>Blog</a>
+        <a href='http://blog.ben43.cn'>Blog</a>
         <a href='Contact'>Contact</a>
       </nav>
     </div>
