--- a/public/index.html
+++ b/public/index.html
@@ -28,58 +28,29 @@
         </svg>
       </div>
       <svg class='logo_holder__text' enable-background='new 0 0 331 129.667' height='129.667px' id='Layer_1'
-        space='preserve' version='1.1' viewBox='0 0 331 129.667' width='331px' x='0px' y='0px'>
-        <g>
-          <g>
-            <path
-              d='M80.869,58.989l-2.242-8.79H62.834l-2.146,8.79H47.43L63.612,3.056h14.43l16.184,55.933H80.869z     M71.898,22.712c-0.389-1.518-0.973-4.794-0.973-4.794h-0.196c0,0-0.585,3.277-0.976,4.794l-4.581,18.299h11.211L71.898,22.712z'
-              fill='#FFFFFF'></path>
-            <path d='M152.511,59.387V3.455h12.675v55.933H152.511z' fill='#FFFFFF'></path>
-            <path d='M175.246,58.989V3.056h36.268v9.988H187.92v14.304h19.889v9.988H187.92v11.666h23.594v9.988H175.246z'
-              fill='#FFFFFF'></path>
-          </g>
-        </g>
-        <g>
-          <g>
-            <path
-              d='M46.558,116.416c-3.41,6.555-9.748,11.029-20.276,11.029c-18.816,0-23.984-14.223-23.984-28.766    c0-14.545,5.168-28.768,23.984-28.768c11.113,0,17.45,5.035,20.765,12.066l-11.017,5.594c-1.656-4.635-4.582-7.672-9.748-7.672    c-8.677,0-11.31,8.709-11.31,18.779c0,10.068,2.633,18.777,11.31,18.777c4.874,0,7.797-2.797,9.457-7.033L46.558,116.416z'
-              fill='#FFFFFF'></path>
-            <path
-              d='M47.43,98.68c0-15.342,5.654-28.768,23.494-28.768c17.843,0,23.497,13.426,23.497,28.768    s-5.654,28.766-23.497,28.766C53.084,127.445,47.43,114.021,47.43,98.68z M81.746,98.68c0-11.668-3.021-18.779-10.822-18.779    c-7.798,0-10.819,7.111-10.819,18.779c0,11.666,3.119,18.777,10.819,18.777C78.627,117.457,81.746,110.346,81.746,98.68z'
-              fill='#FFFFFF'></path>
-            <path
-              d='M129.805,70.713h12.671v37.314c0,13.504-8.87,19.418-20.765,19.418c-11.893,0-21.155-5.914-21.155-19.498    V70.713h12.673v37.795c0,5.514,2.438,8.949,8.288,8.949c6.142,0,8.288-3.596,8.288-9.031V70.713z'
-              fill='#FFFFFF'></path>
-            <path d='M152.511,126.645V70.713h12.675v45.943h14.24v9.988H152.511z' fill='#FFFFFF'></path>
-            <path d='M186.993,126.645V80.701h-11.99v-9.988h36.756v9.988h-11.992v45.943H186.993z' fill='#FFFFFF'></path>
-            <path
-              d='M220.381,126.645V70.713h36.267v9.988h-23.592v14.303h19.888v9.988h-19.888v11.664h23.592v9.988H220.381z'
-              fill='#FFFFFF'></path>
-            <path
-              d='M292.543,126.645l-8.481-17.258c-0.976,0.08-1.95,0.08-2.926,0.08h-4.387v17.178h-12.674V70.713h18.913    c15.5,0,21.936,9.428,21.936,19.178c0,6.152-2.924,12.303-9.163,16.059l10.234,20.695H292.543z M281.526,99.477    c7.214,0,10.82-3.996,10.82-9.426c0-5.676-3.704-9.432-10.917-9.432h-4.681v18.857H281.526z'
-              fill='#FFFFFF'></path>
-            <path
-              d='M313.425,121.133c0-3.438,3.508-6.234,7.701-6.234c4.192,0,7.604,2.797,7.604,6.234    s-3.411,6.312-7.604,6.312C316.933,127.445,313.425,124.57,313.425,121.133z'
-              fill='#FFFFFF'></path>
-          </g>
-        </g>
-        <g>
-          <g>
-            <path
-              d='M130.295,58.954l0.003-34.807l-8.722,14.657h-0.154l-8.396-14.225l0.017,34.493l-12.744-0.119V2.981    h11.143l8.199,14.546c0.696,1.239,1.781,3.403,1.781,3.403h0.154c0,0,1.161-2.165,1.857-3.481l8.122-14.468h11.142v55.972H130.295    z'
-              fill='#FFFFFF'></path>
-          </g>
-        </g>
-        <path
-          d='M15.004,47.612c1.225,0.585,2.758,0.919,4.597,0.919c6.436,0,8.682-3.769,8.682-9.46V2.948h13.279v35.704  c0,14.149-9.295,20.347-21.757,20.347c-3.576,0-7.047-0.504-10.01-1.594L15.004,47.612z'
-          fill='#FFFFFF'></path>
+        space='preserve' version='1.1' viewBox='0 0 331 129.667' width='400px' x='0px' y='0px'>
+        <text x="50" y="50" margin-top="5px" fill="#FFFFFF" font-size="64" font-weight="800" font-family="Arial">你好</text>
+        <text x="50" y="120" margin-top="5px" fill="#FFFFFF" font-size="64" font-weight="800" font-family="Arial">旅行者.</text>
       </svg>
-      <h2>Web/UI Designer Front End Developer for Ben</h2>
+
+      <p >我是 Ben,</p>
+      <br />
+      <p>
+        <ruby>Ben<rt style="font-size: 70%;">/ben/</rt></ruby>
+        是我广泛使用的网名，通过键入它，你可以在互联网上找到关于我的<a class="rubyRt" href="http://ben43.online/about"><ruby>踪迹<rt style="font-size: 70%;">/about</rt></ruby></a>。
+      </p>
+      <br>
+      <p>
+        我现在是一名大四学生，就读于<a class="rubyRt" href="https://xinke.xhsysu.edu.cn/"><ruby>广州新华学院信息与智能学院<rt style="font-size: 70%;">Guangzhou Xinhua University</rt></ruby></a>。如果你恰好也是这个学校的学生，欢迎来格物3-502自修室找我。(目前活跃地点于此)
+      </p>
+      <br>
+      <p>
+        我会在<a class="rubyRt" href="http://ben43.online"><ruby>博客<rt style="font-size: 70%;">/blog</rt></ruby></a>上记录我感兴趣的内容，也会记录自己的学习笔记。有时，我会开发一些有趣的<a class="rubyRt" href="http://github.com/Benn314"><ruby>项目<rt style="font-size: 70%;">/lab</rt></ruby></a>。我乐于邂逅<a class="rubyRt" href="javascript:;"><ruby>有趣的灵魂<rt style="font-size: 70%;">/friend</rt></ruby></a>，他们带给我许多新的思考，伴随着我的成长。
+      </p>
+      <br>
+      <p>近期状态：对佛大的一名21英师<span style="color: pink;"> 古灵精怪 </span>的女生比较有好感 ❤</p>
       <nav>
-        <a href='About'>About</a>
-        <a href='Clients'>Clients</a>
-        <a href='http://ben43.online'>Blog</a>
-        <a href='Contact'>Contact</a>
+        <a href='http://ben43.online'>Go to my Blog</a>
       </nav>
     </div>
   </div>
