fix:update layout and content and cursor

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ben's HomePage</title>
   <link rel="stylesheet" href="css/index.css">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/index.js"></script>
+  <script type="module" src="./js/cursor.js"></script>
 </head>
 
 <body>
@@ -29,26 +31,34 @@
       </div>
       <svg class='logo_holder__text' enable-background='new 0 0 331 129.667' height='129.667px' id='Layer_1'
         space='preserve' version='1.1' viewBox='0 0 331 129.667' width='400px' x='0px' y='0px'>
-        <text x="50" y="50" margin-top="5px" fill="#FFFFFF" font-size="64" font-weight="800" font-family="Arial">你好</text>
-        <text x="50" y="120" margin-top="5px" fill="#FFFFFF" font-size="64" font-weight="800" font-family="Arial">旅行者.</text>
+        <text x="50" y="50" margin-top="5px" fill="#FFFFFF" font-size="64" font-weight="800"
+          font-family="Arial">你好</text>
+        <text x="50" y="120" margin-top="5px" fill="#FFFFFF" font-size="64" font-weight="800"
+          font-family="Arial">旅行者.</text>
       </svg>
 
-      <p >我是 Ben,</p>
+      <p>我是 Ben,</p>
       <br />
       <p>
         <ruby>Ben<rt style="font-size: 70%;">/ben/</rt></ruby>
-        是我广泛使用的网名，通过键入它，你可以在互联网上找到关于我的<a class="rubyRt" href="http://ben43.online/about"><ruby>踪迹<rt style="font-size: 70%;">/about</rt></ruby></a>。
+        是我广泛使用的网名，通过键入它，你可以在互联网上找到关于我的<a class="rubyRt" href="http://ben43.online/about"><ruby>踪迹<rt
+              style="font-size: 70%;">/about</rt></ruby></a>。
       </p>
       <br>
       <p>
-        我现在是一名大四学生，就读于<a class="rubyRt" href="https://xinke.xhsysu.edu.cn/"><ruby>广州新华学院信息与智能学院<rt style="font-size: 70%;">Guangzhou Xinhua University</rt></ruby></a>。如果你恰好也是这个学校的学生，欢迎来格物3-502自修室找我。(目前活跃地点于此)
+        我现在是一名大四学生，就读于<a class="rubyRt" href="https://xinke.xhsysu.edu.cn/"><ruby>广州新华学院信息与智能学院<rt
+              style="font-size: 70%;">Guangzhou Xinhua University</rt>
+            </ruby></a>。如果你恰好也是这个学校的学生，欢迎来格物3-502自修室找我。(目前活跃地点于此)
       </p>
       <br>
       <p>
-        我会在<a class="rubyRt" href="http://ben43.online"><ruby>博客<rt style="font-size: 70%;">/blog</rt></ruby></a>上记录我感兴趣的内容，也会记录自己的学习笔记。有时，我会开发一些有趣的<a class="rubyRt" href="http://github.com/Benn314"><ruby>项目<rt style="font-size: 70%;">/lab</rt></ruby></a>。我乐于邂逅<a class="rubyRt" href="javascript:;"><ruby>有趣的灵魂<rt style="font-size: 70%;">/friend</rt></ruby></a>，他们带给我许多新的思考，伴随着我的成长。
+        我会在<a class="rubyRt" href="http://ben43.online"><ruby>博客<rt style="font-size: 70%;">/blog</rt>
+            </ruby></a>上记录我感兴趣的内容，也会记录自己的学习笔记。有时，我会开发一些有趣的<a class="rubyRt" href="http://github.com/Benn314"><ruby>项目<rt
+              style="font-size: 70%;">/lab</rt></ruby></a>。我乐于邂逅<a class="rubyRt" href="javascript:;"><ruby>有趣的灵魂<rt
+              style="font-size: 70%;">/friend</rt></ruby></a>，他们带给我许多新的思考，伴随着我的成长。
       </p>
       <br>
-      <p>近期状态：对佛大的一名21英师<span style="color: pink;"> 古灵精怪 </span>的女生比较有好感 ❤</p>
+      <p>近期状态：对佛大的一名21英师<span style="color: pink;"> 古灵精怪 </span>的女生比较有好感❤</p>
       <nav>
         <a href='http://ben43.online'>Go to my Blog</a>
       </nav>
