fix:blog link style

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
       <br>
       <p>近期状态：对佛大的一名21英师<span style="color: pink;"> 古灵精怪 </span>的女生比较有好感💜</p>
       <nav>
-        <a href='http://ben43.online'>Go to my Blog</a>
+        <a href='http://ben43.online'><i>Go&nbsp;&nbsp;to&nbsp;&nbsp;my&nbsp;&nbsp;Blog</i></a>
       </nav>
     </div>
   </div>
