--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
               style="font-size: 70%;">/friend</rt></ruby></a>，他们带给我许多新的思考，伴随着我的成长。
       </p>
       <br>
-      <p>近期状态：对佛大的一名21英师<span style="color: pink;"> 古灵精怪 </span>的女生比较有好感💜</p>
+      <p>近期状态：对佛大的一名21英师<a href="javascript:;" style="color: pink;text-decoration: none;"> 古灵精怪 </a>的女生比较有好感💜</p>
       <nav>
         <a href='http://ben43.online'><i>Go&nbsp;&nbsp;to&nbsp;&nbsp;my&nbsp;&nbsp;Blog</i></a>
       </nav>
